[project]
name = "ComfyUI-Ninode-Utils"
version = "0.9.0"
description = "Utility nodes for ComfyUI including OpenAI Compatible Chat"
authors = [
    {name = "iGavroche", email = "nino2k@proton.me"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/iGavroche/ComfyUI-Ninode-Utils"
Repository = "https://github.com/iGavroche/ComfyUI-Ninode-Utils"
Issues = "https://github.com/iGavroche/ComfyUI-Ninode-Utils/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.comfy]
PublisherId = "" # TODO: Fill in your Publisher ID from Comfy Registry Website
DisplayName = "ComfyUI Ninode Utils"
Icon = "icon.svg"
