[project]
name = "comfyui-ninode-utils"
description = "Utility nodes for ComfyUI including OpenAI Compatible Chat - Works with any OpenAI-compatible API endpoint including Lemonade, Ollama, OpenAI API, and LM Studio"
version = "0.9.1"
license = {file = "LICENSE"}
dependencies = [
    "aiohttp>=3.8.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.25.0",
]

[project.urls]
Repository = "https://github.com/iGavroche/ComfyUI-Ninode-Utils"

[tool.comfy]
PublisherId = "igavroche"
DisplayName = "Ninode Utils"
Icon = "https://raw.githubusercontent.com/iGavroche/ComfyUI-Ninode-Utils/refs/heads/main/icon.svg"
includes = ["nodes.py", "__init__.py"]
requires-comfyui = ">=1.0.0"

[tool.comfyui-manager]
name = "comfyui-ninode-utils"
display_name = "Ninode Utils"
description = "Utility nodes for ComfyUI including OpenAI Compatible Chat - Works with any OpenAI-compatible API endpoint"
version = "0.9.1"
author = "iGavroche"
author_email = "nino2k@proton.me"
repository = "https://github.com/iGavroche/ComfyUI-Ninode-Utils"
license = "MIT"
nodes = [
    "OpenAICompatibleChatNode"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
